Fix CSS on Safari

--- a/activities/XmasLights.activity/css/activity.css
+++ b/activities/XmasLights.activity/css/activity.css
@@ -270,6 +270,7 @@ p {
 #detail {
 	background-color: #C0C0C0;
 	user-select: none;
+	-webkit-user-select: none;
 }
 
 .column1 {
